# protein_happi

./: .gitignore  Dockerfile  README.md  env_combined_esm3b_faesm_exact.sh  env_combined_esm3b_faesm_ivf.sh  example_usage.py  install.sh  main.py  pyproject.toml  tests_comprehensive.py
.github/workflows/: docker_publish.yml
scripts/: entrypoint.sh  run_dev.sh  run_dev_sprot_esm650m.sh  run_dev_trembl.sh  run_dev_uniprot_esm3b_exact.sh  run_dev_uniprot_esm3b_ivf.sh  uv_run_dev_uniprot_esm3b_ivf.sh
src/: config.py  factory.py  logging_config.py  models.py  run_test.py  search.py  test.py
