[project]
name = "protein-happi"
version = "0.1.0"
authors = [
    { name = "Alexander Brace", email = "abrace@anl.gov" },
    { name = "Boris Sadkhin", email = "bsadkhin@anl.gov" },
]
description = "AI homology detection."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.11",
    "pydantic-settings>=2.8.1",
    "protein_search_evals==0.0.4",
    "uvicorn>=0.34.0",
    "faiss-gpu-cu12==1.10.0",
    "flash-attn",
    "faesm[flash_attn]",
]

[tool.uv.sources]
protein_search_evals = { git = "https://github.com/braceal/protein_search_evals.git" }
